--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,13 +2,26 @@ button{
   position: fixed;
   width: 50px;
   height: 50px;
-  border-radius: 4px;
+  border-radius: 20px;
+  transition-duration: 0.25s;
+}
+#reset{
+  position: fixed;
+  margin-top: 10px;
+  margin-left: 130px;
+  width: 110px;
+  border-width: 6px;
+  border-color: rgb(150, 150, 150);
+  background-color: rgb(230, 230, 230);
+  font-family: Coiny;
+  font-size: 20px;
+  text-align: center;
 }
 #check{
-  position:fixed;
+  position: fixed;
   margin-top: 10px;
-  margin-left: 310px;
-  width: 120px;
+  margin-left: 10px;
+  width: 110px;
   border-width: 6px;
   border-color: rgb(150, 150, 150);
   background-color: rgb(230, 230, 230);
@@ -43,18 +56,36 @@ button{
 .x5{
   margin-left: 250px;
 }
-.y1{
-  margin-top: 10px;
+.x6{
+  margin-left: 310px;
 }
-.y2{
+.x7{
+  margin-left: 370px;
+}
+.x8{
+  margin-left: 430px;
+}
+.y1{
   margin-top: 70px;
 }
-.y3{
+.y2{
   margin-top: 130px;
 }
-.y4{
+.y3{
   margin-top: 190px;
 }
-.y5{
+.y4{
   margin-top: 250px;
+}
+.y5{
+  margin-top: 310px;
+}
+.y6{
+  margin-top: 370px;
+}
+.y7{
+  margin-top: 430px;
+}
+.y8{
+  margin-top: 490px;
 }
